# reworkctf

./: .gitmodules  CHALLENGES.md  LICENSE  README.md
doc/: .gitignore  reworkctf.tex
firmware/: .gitignore  CMakeLists.txt  openocd-orb.cfg  top.v
firmware/bl/: CMakeLists.txt  bootloader.h  bootloader.ld  mainloop.cpp  vectors.cpp
firmware/bsp/: CMakeLists.txt  common-vectors.cpp  hwinit.cpp  hwinit.h
pcb/: reworkctf-cache.lib  reworkctf.kicad_pcb  reworkctf.sch
v1/firmware/: top.ucf  top.v
v1/pcb/: reworkctf-cache.lib  reworkctf.kicad_pcb  reworkctf.pro
v2/pcb/: .gitignore  free-play.kicad_sch  psu.kicad_sch  reworkctf-v2.kicad_pcb  reworkctf-v2.kicad_pro  reworkctf-v2.kicad_sch
